# stremio-manager

./: .gitignore  README.md  comet.env  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  Dockerfile.prod  check_sys_path.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202ce94172d6_add_addonusagelog_table.py  283dc8c29b88_add_trakt_user_auth_table.py  96a6a1bf0350_add_is_admin_field_to_user_model.py  a21b92cc3645_create_user_table.py  b2b81bfd4375_create_user_table_v2.py
backend/app/: crud.py  database.py  main.py  models.py
backend/app/api/v1/routers/: addon_router.py  analytics_router.py  auth_router.py  user_router.py
backend/app/core/: config.py  security.py
backend/app/schemas/: __init__.py  addon_schemas.py  analytics_schemas.py  user_schemas.py
backend/scripts/: seed.py
data/comet/: comet.db
docs/: stremio_setup.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  placeholder.txt  vite.config.js
frontend/nginx/: default.conf
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Dashboard.vue  UserManagement.vue
